Pl Docs Polish - schema table -- removed '-' and newline at the start of every description

--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -6,7 +6,7 @@
     {%- if minimum %} - Minimum is {{ minimum }} {%- endif %}
     {%- if maximum %} - Maximum is {{ maximum }} {%- endif %}
   {% endif %}
-  {%- if description %} - {{ description | markdown }} {% endif -%}
+  {%- if description %}{{ description | markdown }} {% endif -%}
 {% endmacro %}
 
 
