Pl Docs Polish - schema table -- removed '-' at the start of title in the description

--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -1,5 +1,5 @@
 {% macro titleAndDescription(title, description, minimum, maximum) %}
-  {%- if title %} - <strong>{{ title | markdown }}</strong> {% endif -%}
+  {%- if title %}<strong>{{ title | markdown }}</strong> {% endif -%}
   {% if minimum and maximum %}
     - [{{ minimum }} ~ {{ maximum }}]
   {% else %}
