update readme links (#448)
* update docs twig to use new readme include

* update blockquote readme

* update action blocks, background shapes, background docs

* update band, breadcrumb, button, button-group, card, chip, chip-list readme

* update breadcrumb, device viewer, headline, icon, mage, link, logo

* update nav-bar, ordered list, footer, header, sticky, teaser, and unordered-list

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/breadcrumbs/00-breadcrumb-docs.twig
@@ -1,5 +1,4 @@
 {#{% set schema = get_data('@bolt-components-breadcrumb/breadcrumb.schema.yml') %}#}
-{% set readme = source('@bolt-components-breadcrumb/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-breadcrumb/breadcrumb.twig" with {
   "contentItems": [
@@ -24,6 +23,5 @@
 {% include '@utils/docs.twig' with {
   schema: schema,
   code: code,
-  readme: readme,
-  readmePath: 'packages/components/bolt-breadcrumb/README.md',
+  readmeFile: '@bolt-components-breadcrumb/README.md',
 } only %}
