--- a/apps/pattern-lab--workshop/src/_includes/utils/md-embed.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/md-embed.twig
@@ -1,6 +1,9 @@
 {# `file` - path to markdown content, like `@bolt-footer/readme.md` #}
 <div class="c-bolt-md-embed">
-  <a href="{{ github_url(file) }}" class="c-bolt-md-embed__edit" target="_blank">Edit this on GitHub</a>
+  <a href="{{ github_url(file) }}" class="c-bolt-md-embed__edit" target="_blank">
+    <bolt-icon name="pencil"></bolt-icon>
+    Edit this on GitHub
+  </a>
   <div class="c-bolt-md-embed__content">
     {{ source(file) | markdown }}
   </div>
