--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/00-homepage.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/00-homepage.twig
@@ -90,7 +90,8 @@
       ],
       logo: {
         src: "/images/content/logos/logo-paypal.svg",
-        invert: true
+        invert: true,
+        lazyload: false
       },
       content: "Powered by real AI, Pega Customer Service delivers game-changing results for enterprises.",
       buttons: [
@@ -105,7 +106,7 @@
       ]
     },
     content: feature_band.content | default(content),
-   
+
   } only %}{% endembed %}
 
 
@@ -182,7 +183,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -217,7 +218,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+          "src": "/images/content/promos/promo-16x9-ai.jpg"
         },
         {
           "pattern": "teaser",
@@ -267,7 +268,7 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
+            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png"
           } only %}
         {% endcell %}
 
