update images in rest of page demos

--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/20-resource-details-pages/_resource-details-page.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/20-resource-details-pages/_resource-details-page.twig
@@ -19,7 +19,8 @@
         {# TODO: check if image exists #}
         {% cell 'u-bolt-width-1/1 u-bolt-width-5/12@medium' %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/anthem-video.jpg"
+            src: "/images/content/promos/promo-16x9-anthem.jpg",
+            lazyload: false
           } only %}
         {% endcell %}
 
@@ -196,7 +197,8 @@
       {% cell 'u-bolt-width-1/1 u-bolt-width-1/2@medium' %}
          {% include "@bolt/card-w-teaser.twig" with {
             "image": {
-              "src": "/images/placeholders/1200x660.jpg"
+              "src": "/images/placeholders/1200x660.jpg",
+              "lazyload": false
             },
             "teaser": {
               "headlines": [
