--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
@@ -201,7 +201,7 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/images/content/promos/promo-16x9-anthem.jpg"
       },
       "teaser": {
         "eyebrow": {
@@ -236,7 +236,7 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+          "src": "/images/content/promos/promo-16x9-ai.jpg"
         },
         {
           "pattern": "teaser",
@@ -286,7 +286,8 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
+            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png",
+            lazyload: false
           } only %}
         {% endcell %}
 
@@ -304,7 +305,7 @@
 
               <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall o-bolt-inline-list--valign-top">
               <li class="o-bolt-inline-list__item">
-                 
+
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
   <span class="c-bolt-text__text">
           Whiteboard
@@ -313,7 +314,7 @@
   </span>
         </li>
               <li class="o-bolt-inline-list__item">
-                 
+
 
 
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
@@ -325,10 +326,10 @@
 
         </li>
           </ul>
-             
+
               <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall o-bolt-inline-list--delimited o-bolt-inline-list--valign-top">
               <li class="o-bolt-inline-list__item">
-                 
+
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
   <span class="c-bolt-text__text">
           Whiteboard
@@ -337,7 +338,7 @@
   </span>
         </li>
               <li class="o-bolt-inline-list__item">
-                 
+
 
 
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
