--- a/apps/pattern-lab--workshop/src/styles/_docs.scss
+++ b/apps/pattern-lab--workshop/src/styles/_docs.scss
@@ -210,8 +210,7 @@ pre {
       color: red;
     }
     ul {
-      margin: 0;
-      padding: 0;
+      //margin: 0;
     }
   }
 }
@@ -228,6 +227,31 @@ pre {
   overflow: hidden; // Prevent nested tables from scrolling to keep things from getting too crazy
 }
 
+.c-bolt-docs-list {
+  list-style-position: inside;
+  list-style-type: none;
+  margin: 0;
+
+  & > ul {
+    margin-bottom: 0;
+  }
+}
+
+.c-bolt-docs-list__child {
+  list-style-position: outside;
+  list-style-type: square;
+  margin: 0 0 0 1.25rem;
+
+  &--level-3,
+  &--level-4,
+  &--level-5 {
+    margin-bottom: 0;
+
+    ul {
+      margin-bottom: 0;
+    }
+  }
+}
 
 
 .c-bolt-docs__heading-fragment a {
