fix device images

--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
@@ -85,7 +85,8 @@
       ],
       logo: {
         src: "/images/content/logos/logo-paypal.svg",
-        invert: true
+        invert: true,
+        lazyload: false
       },
       content: "Powered by real AI," ~ bolt.link("Pega Customer Service", "google.com") ~ " delivers game-changing results for enterprises.",
       buttons: [
@@ -167,7 +168,8 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/images/content/backgrounds/background-tall-1.jpg",
+        "lazyload": false
       }
     ]
   },
@@ -178,7 +180,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg"
+          "src": "/images/placeholders/1200x660.jpg",
+          "lazyload": false
         },
         {
           "pattern": "headline",
@@ -201,7 +204,8 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/content/promos/promo-16x9-anthem.jpg"
+        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "lazyload": false
       },
       "teaser": {
         "eyebrow": {
@@ -236,7 +240,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/content/promos/promo-16x9-ai.jpg"
+          "src": "/images/content/promos/promo-16x9-ai.jpg",
+          "lazyload": false
         },
         {
           "pattern": "teaser",
