fix: fix card media block from displaying properly when content not passed along; add missing breadcrumb component to components-all; prevent content from spilling out of ratio object

--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/src/ratio.scss
@@ -7,6 +7,7 @@ bolt-ratio {
   display: inline-block;
   position: relative;
   width: 100%;
+  overflow: hidden; // Hide placeholder blurred images from leaking through
 
   --aspect-ratio-width: 1;
   --aspect-ratio-height: 1;
