--- a/src/_patterns/02-components/bolt-card/src/card.twig
+++ b/src/_patterns/02-components/bolt-card/src/card.twig
@@ -37,7 +37,7 @@
 {% for collectionName in _allowedCollections %}
   {% if _context[collectionName] %}
     {% for key, item in _context[collectionName] if item.pattern in _allowedItems or key in _allowedItems %}
-      
+
       {% if item.buttons %}
         {% set buttons = item.buttons %}
         {% for button in buttons %}
@@ -46,7 +46,7 @@
           }) %}
           {% set _items = _items | merge([button]) %}
         {% endfor %}
-      
+
         {% set item = item | merge({
           "buttons": null
         }) %}
@@ -81,6 +81,22 @@
 
 
 
+{% set cardMedia %}
+  {% for key, item in _items if item.pattern in _allowedCardHeaderItems %}
+    {% if item.pattern %}
+      {% if item.pattern == 'image' and url is not empty %}
+        <a href="{{url}}">
+      {% endif %}
+      {% include pattern_template(item.pattern) with item only %}
+      {% if item.pattern == 'image' and url is not empty %}
+        </a>
+      {% endif %}
+    {% else %}
+      {{ item }}
+    {% endif %}
+  {% endfor %}
+{% endset %}
+
 <bolt-card
   theme="{{ theme }}"
   {% if url %}url={{ url }}{% endif %}
@@ -90,25 +106,12 @@
     {% if block('card_media') is not empty %}
       <div class="{{ "#{baseClass}__media" }}">{% spaceless %}
         {% block card_media %}
-          {% for key, item in _items if item.pattern in _allowedCardHeaderItems or key in _allowedCardHeaderItems %}
-            {% if item.pattern %}
-              {% if item.pattern == 'image' and url is not empty %}
-                <a href="{{url}}">
-              {% endif %}
-              {% include pattern_template(item.pattern) with item only %}
-              {% if item.pattern == 'image' and url is not empty %}
-                </a>
-              {% endif %}
-            {% else %}
-              {{ item }}
-            {% endif %}
-            
-          {% endfor %}
+          {{ cardMedia }}
         {% endblock %}
       {% endspaceless %}</div>
     {% endif %}
 
-    
+
     {% if block('card_body') is not empty %}
     <{{ contentTag }} class="{{ "#{baseClass}__body" }}">{% spaceless %}
       {% block card_body %}
@@ -120,7 +123,7 @@
           {% else %}
             {{ item }}
           {% endif %}
-          
+
         {% endfor %}
       {% endblock card_body %}
     {% endspaceless %}</{{ contentTag }}>
@@ -129,25 +132,44 @@
     {% if block('card_footer') is not empty %}
       <div class="{{ "#{baseClass}__footer" }}">{% spaceless %}
         {% block card_footer %}
-        
+
           {% for item in _items if item.pattern in _allowedCardFooterItems %}
             {% set paramOverrides = {
               itemAlignment: "left",
               style: "text",
-              icon: {
-                name: "chevron-right"
-              }
             } %}
+
+            {% if item.icon == null %}
+              {% if item.external == true %}
+                {% set iconOverrides = {
+                  icon: {
+                    name: "external-link"
+                  }
+                } %}
+              {% else %}
+                {% set iconOverrides = {
+                  icon: {
+                    name: "chevron-right"
+                  }
+                } %}
+              {% endif %}
+            {% endif %}
+
              <div class="{{ "#{baseClass}__footer-item" }}">
               {% if item.pattern %}
                 {% set item = item | merge(paramOverrides) %}
+
+                {# if icon default data set, merge that in as well #}
+                {% if iconOverrides %}
+                  {% set item = item | merge(iconOverrides) %}
+                {% endif %}
                 {% include pattern_template(item.pattern) with item only %}
               {% else %}
                 {{ item }}
               {% endif %}
             </div>
           {% endfor %}
-         
+
         {% endblock card_footer %}
       {% endspaceless %}</div>
     {% endif %}
