--- a/apps/pattern-lab--workshop/src/styles/_docs.scss
+++ b/apps/pattern-lab--workshop/src/styles/_docs.scss
@@ -4,7 +4,7 @@
   &__schema {
     ul {
       p {
-        display: inline-block;
+        display: inline;
         margin: 0;
       }
 
@@ -23,6 +23,10 @@
         }
         &,summary {
           margin: 0;
+        }
+
+        ul {
+          margin-bottom: 0;
         }
       }
     }
