chore: fixing up links

--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.twig
@@ -10,16 +10,16 @@
       </a>
     </li>
     <li class="c-pw-mobile-menu-list__item">
-      <a href="" class="c-pw-mobile-menu-link">Facts</a>
+      <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-pw-mobile-menu-link">Facts</a>
     </li>
     <li class="c-pw-mobile-menu-list__item">
-      <a href="" class="c-pw-mobile-menu-link">Agenda</a>
+      <a href="https://www.pega.com/events/pegaworld/agenda" class="c-pw-mobile-menu-link">Agenda</a>
     </li>
     <li class="c-pw-mobile-menu-list__item">
-      <a href="" class="c-pw-mobile-menu-link">Experience</a>
+      <a href="https://www.pega.com/events/pegaworld/trending" class="c-pw-mobile-menu-link">Experience</a>
     </li>
     <li class="c-pw-mobile-menu-list__item">
-      <a href="" class="c-bolt-button c-bolt-button--large c-bolt-button--secondary u-pw-full-at-bp-400-only">Register</a>
+      <a href="https://www.cvent.com/events/pegaworld-2018/registration-510ce28f40334ea195526c224ae26a21.aspx" class="c-bolt-button c-bolt-button--large c-bolt-button--secondary u-pw-full-at-bp-400-only">Register</a>
     </li>
   </ul>
 </nav>
@@ -35,16 +35,16 @@
     </a>
     <ul class="c-pw-menu-list">
       <li class="c-pw-menu-list__item">
-        <a href="" class="c-pw-menu-link">Facts</a>
+        <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-pw-menu-link">Facts</a>
       </li>
       <li class="c-pw-menu-list__item">
-        <a href="" class="c-pw-menu-link">Agenda</a>
+        <a href="https://www.pega.com/events/pegaworld/agenda" class="c-pw-menu-link">Agenda</a>
       </li>
       <li class="c-pw-menu-list__item">
-        <a href="" class="c-pw-menu-link">Experience</a>
+        <a href="https://www.pega.com/events/pegaworld/trending" class="c-pw-menu-link">Experience</a>
       </li>
       <li class="c-pw-menu-list__item">
-        <a href="" class="c-bolt-button c-bolt-button--secondary">Register</a>
+        <a href="https://www.cvent.com/events/pegaworld-2018/registration-510ce28f40334ea195526c224ae26a21.aspx" class="c-bolt-button c-bolt-button--secondary">Register</a>
       </li>
     </ul>
   </nav>
@@ -65,7 +65,7 @@
             "text": "Digital Transformation is hard. Join us at PegaWorld 2018 to learn how to get it right.",
             "tag": "h2"
           } only %}
-          <a href="" class="c-bolt-button c-bolt-button--primary">Register now</a>
+          <a href="https://www.pega.com/events/pegaworld/event-details/why-attend" class="c-pw-mobile-menu-link" class="c-bolt-button c-bolt-button--primary">Register now</a>
         {% endcell %}
       {% endgrid %}
     {% endcell %}
@@ -231,7 +231,7 @@
           "author": {
             "name": "2017 Attendee"
           },
-          "content": "<p>PegaWorld is a fantastic knowledge-building and networking experience. I look forward to returning next year.</p>"
+          "content": "<p>PPegaWorld is hands-down the best technology conference I’ve been to…and I’ve been to them all. Practical insights that I was able to take back to my business that have delivered real results. I look forward to returning next year.</p>"
         } only %}
       </div>
     </div>
@@ -397,7 +397,7 @@
       {% cell "u-bolt-width-1/1" %}
         {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix" %}
           {% cell %}
-            <a href="" class="c-bolt-button c-bolt-button--primary">Watch the Replays</a>
+            <a href="https://www.pega.com/events/pegaworld/replays" class="c-bolt-button c-bolt-button--primary">Watch the Replays</a>
           {% endcell %}
         {% endgrid %}
       {% endcell %}
@@ -515,7 +515,7 @@
       {% cell "u-bolt-width-1/1" %}
         {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix" %}
           {% cell %}
-            <a href="" class="c-bolt-button c-bolt-button--primary">Call to action</a>
+            <a href="https://www.pega.com/events/pegaworld" class="c-bolt-button c-bolt-button--primary">View 2018 Agenda</a>
           {% endcell %}
         {% endgrid %}
       {% endcell %}
@@ -525,8 +525,7 @@
 
 {% embed "@bolt/band.twig" with {
   theme: "xdark",
-  size: "large",
-  fullBleed: true
+  size: "large"
 } only %}
   {% block band_content %}
     {% grid "o-bolt-grid--flex o-bolt-grid--matrix" %}
@@ -658,7 +657,7 @@
       {% cell "u-bolt-width-1/1" %}
         {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix" %}
           {% cell %}
-            <a href="" class="c-bolt-button c-bolt-button--primary">Register now!</a>
+            <a href="https://www.cvent.com/events/pegaworld-2018/registration-510ce28f40334ea195526c224ae26a21.aspx" class="c-pw-mobile-menu-link" class="c-bolt-button c-bolt-button--primary">Register now!</a>
           {% endcell %}
         {% endgrid %}
       {% endcell %}
@@ -790,10 +789,9 @@
   {% endblock %}
 {% endembed %}
 
-{% embed "@bolt/band.twig" with {
+{# {% embed "@bolt/band.twig" with {
   theme: "xdark",
-  size: "large",
-  fullBleed: true
+  size: "large"
 } only %}
   {% block band_content %}
     {% grid "o-bolt-grid--flex o-bolt-grid--matrix" %}
@@ -935,5 +933,5 @@
       {% endcell %}
     {% endgrid %}
   {% endblock %}
-{% endembed %}
+{% endembed %} #}
 
