--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/50-pega-world/pega-world.twig
@@ -447,7 +447,7 @@
                 {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix u-pw-position-lower-logo__logo" %}
                   {% cell %}
                     {% include "@bolt/logo.twig" with {
-                      src: "/images/pw2018/logo-paypal.png",
+                      src: "/images/pw2018/coca-cola-logo-white.png",
                       alt: "Logo",
                       align: "center"
                     } only %}
@@ -474,7 +474,7 @@
                 {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix u-pw-position-lower-logo__logo" %}
                   {% cell %}
                     {% include "@bolt/logo.twig" with {
-                      src: "/images/pw2018/logo-paypal.png",
+                      src: "/images/pw2018/gm-logo-white.png",
                       alt: "Logo",
                       align: "center"
                     } only %}
@@ -501,7 +501,7 @@
                 {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix u-pw-position-lower-logo__logo" %}
                   {% cell %}
                     {% include "@bolt/logo.twig" with {
-                      src: "/images/pw2018/logo-paypal.png",
+                      src: "/images/pw2018/sprint-logo-white.png",
                       alt: "Logo",
                       align: "center"
                     } only %}
@@ -657,7 +657,7 @@
       {% cell "u-bolt-width-1/1" %}
         {% grid "o-bolt-grid--flex o-bolt-grid--center o-bolt-grid--matrix" %}
           {% cell %}
-            <a href="https://www.cvent.com/events/pegaworld-2018/registration-510ce28f40334ea195526c224ae26a21.aspx" class="c-pw-mobile-menu-link" class="c-bolt-button c-bolt-button--primary">Register now!</a>
+            <a href="https://www.cvent.com/events/pegaworld-2018/registration-510ce28f40334ea195526c224ae26a21.aspx" class="c-bolt-button c-bolt-button--primary">Register now!</a>
           {% endcell %}
         {% endgrid %}
       {% endcell %}
